--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -1,4 +1,4 @@
-name: CMake
+name: Build
 
 on: [ push ]
 
@@ -23,7 +23,6 @@ jobs:
       
     steps:
       - uses: actions/checkout@v2
-      # - uses: lukka/get-cmake@latest
 
       - name: Create Build Environment
         # Some projects don't allow in-source building, so create a separate build directory
@@ -44,7 +43,7 @@ jobs:
         working-directory: ${{runner.workspace}}/build
         shell: bash
         # Execute the build.  You can specify a specific target with "--target <NAME>"
-        run: cmake --build . --config $BUILD_TYPE
+        run: cmake --build . --config $BUILD_TYPE && cmake --build . --target testrekt --config $BUILD_TYPE
 
       - name: Test
         working-directory: ${{runner.workspace}}/build
