--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ include(CTest)
 include(FetchContent)
 
 if(MSVC)
-  add_compile_options(/W4 /WX)
+  add_compile_options(/W4 /Wall)
 else()
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
