Added nlohmann/json dependency to cmake

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,9 @@ SET(LIB_HEADER_LIST
 	"${PROJECT_SOURCE_DIR}/include/rekt/rectangle.hpp"
 )
 
+FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download/v3.10.5/json.tar.xz)
+FetchContent_MakeAvailable(json)
+
 # Make an automatic library - will be static or dynamic based on user setting
 add_library(rekt ${LIB_CXX_LIST} ${LIB_HEADER_LIST})
 add_executable(rektapp ${APP_CXX_LIST} ${APP_HEADER_LIST})
@@ -12,7 +15,7 @@ add_executable(rektapp ${APP_CXX_LIST} ${APP_HEADER_LIST})
 # We need this directory, and users of our library will need it too
 target_include_directories(rekt PUBLIC ../include)
 
-# target_link_libraries(librekt PRIVATE nlohmann_json::nlohmann_json)
+target_link_libraries(rekt PRIVATE nlohmann_json::nlohmann_json)
 target_link_libraries(rektapp PRIVATE rekt)
 
 # Use C++17
