--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,16 +1,24 @@
-SET(APP_CXX_LIST main.cpp rektapp.cpp)
-SET(APP_HEADER_LIST rektapp.hpp)
-SET(LIB_CXX_LIST rectangle.cpp)
-SET(LIB_HEADER_LIST
-	"${PROJECT_SOURCE_DIR}/include/rekt/rectangle.hpp"
-)
-
 FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download/v3.10.5/json.tar.xz)
 FetchContent_MakeAvailable(json)
 
-# Make an automatic library - will be static or dynamic based on user setting
+SET(LIB_CXX_LIST
+	rectangle.cpp
+	io.cpp
+	util.cpp
+	rekt.cpp
+)
+
+SET(LIB_HEADER_LIST
+	"${PROJECT_SOURCE_DIR}/include/rekt/rectangle.hpp"
+	"${PROJECT_SOURCE_DIR}/include/rekt/io.hpp"
+	"${PROJECT_SOURCE_DIR}/include/rekt/util.hpp"
+	"${PROJECT_SOURCE_DIR}/include/rekt/rekt.hpp"
+)
+
 add_library(rekt ${LIB_CXX_LIST} ${LIB_HEADER_LIST})
-add_executable(rektapp ${APP_CXX_LIST} ${APP_HEADER_LIST})
+
+SET(APP_CXX_LIST main.cpp)
+add_executable(rektapp ${APP_CXX_LIST})
 
 # We need this directory, and users of our library will need it too
 target_include_directories(rekt PUBLIC ../include)
@@ -21,3 +29,13 @@ target_link_libraries(rektapp PRIVATE rekt)
 # Use C++17
 target_compile_features(rekt PRIVATE cxx_std_17)
 target_compile_features(rektapp PRIVATE cxx_std_17)
+
+add_custom_command(TARGET rekt POST_BUILD
+	COMMAND ${CMAKE_COMMAND} -E make_directory ${PROJECT_BINARY_DIR}/lib/
+    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:rekt> ${PROJECT_BINARY_DIR}/lib/
+)
+
+add_custom_command(TARGET rektapp POST_BUILD
+	COMMAND ${CMAKE_COMMAND} -E make_directory ${PROJECT_BINARY_DIR}/bin/
+    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:rektapp> ${PROJECT_BINARY_DIR}/bin/
+)
