--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,14 +4,13 @@ FetchContent_Declare(catch GIT_REPOSITORY https://github.com/catchorg/Catch2.git
 FetchContent_MakeAvailable(catch)
 
 # Tests need to be added as executables first
-add_executable(testrekt EXCLUDE_FROM_ALL testrekt.cpp testrectangle.cpp)
+add_executable(testrekt EXCLUDE_FROM_ALL testrekt.cpp testrectangle.cpp testio.cpp)
 
-# I'm using C++17 in the test
+# Use C++17
 target_compile_features(testrekt PRIVATE cxx_std_17)
 
 # Should be linked to the main library, as well as the Catch2 testing library
-target_link_libraries(testrekt PRIVATE Catch2::Catch2)
-target_link_libraries(testrekt PRIVATE rekt)
+target_link_libraries(testrekt PRIVATE Catch2::Catch2 rekt)
 
 # If you register a test, then ctest and make test will run it.
 # You can also run examples and check the output, as well.
